[package]
name = "sensulator"
version = "0.5.0"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/tstellanova/sensulator"
description = "Simple sensor simulator, provides noisy readings of ideal measurements"
readme = "README.md"
edition = "2021"

[dependencies]
rand_core = {version = "0.6.4", default-features = false, features = ["alloc"] }
rand_distr = {version = "0.4.3", default-features = false, features = ["alloc"] }

[target.'cfg(unix)'.dev-dependencies]
quickcheck = "0.6"
rand = {version="0.8.5" }

[target.'cfg(target_arch = "thumbv7em-none-eabihf")'.dependencies]
alloc-no-stdlib = "2.0.4"
rand = {version="0.8.5", default-features = false, features = ["alloc","small_rng"] }

[target.'cfg(target_arch = "thumbv7em-none-eabihf")'.dev-dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
stm32f4xx-hal = { version ="0.13.2", features = ["stm32f417", "rt"]}
embedded-hal = "0.2.7"




