[package]
name = "sensulator"
version = "0.5.0"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/tstellanova/sensulator"
description = "Simple sensor simulator, provides noisy readings of ideal measurements"
readme = "README.md"
edition = "2021"

[dependencies]
rand_core = {version = "0.6.4", default-features = false }
rand_distr = {version = "0.4.3", default-features = false}

[target.'cfg(unix)'.dev-dependencies]
quickcheck = "0.6"
rand = {version="0.8.5" }





